--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,8 @@
 }
 
 .grid-list {
+  max-height: 235px;
+  overflow-y:auto;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
   gap: 10px;
