--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,89 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-size: 20px;
 }
 
-.grid-list {
-  max-height: 235px;
-  overflow-y:auto;
+.App {
+  text-align: center;
+  min-height: 100vh;
+  background-color: black;
+}
+
+.App-header {
+  background-color: aquamarine;
+  margin-bottom: 1rem;
+  height: 3rem;
+}
+
+.App-header-nav {
+  height: inherit;
+}
+
+.App-header-nav-ul {
+  height: inherit;
+  list-style-type: none;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.App-header-nav-ul-li_link {
+  height: inherit;
+  text-decoration: none;
+}
+
+.home-decoration-1 {
+  content: '';
+  width: 200px;
+  height: 200px;
+  border: 5px solid aquamarine;
+  border-radius: 100%;
+  position: absolute;
+  top: -50px;
+  left: -100px;
+}
+
+.home-decoration-2{
+    content: '';
+  width: 250px;
+  height: 250px;
+  border: 5px solid aquamarine;
+  border-radius: 100%;
+  position: absolute;
+  top: -50px;
+  left: -100px;
+}
+
+.home-decoration-3{
+    content: '';
+  width: 300px;
+  height: 300px;
+  border: 5px solid aquamarine;
+  border-radius: 100%;
+  position: absolute;
+  top: -50px;
+  left: -100px;
+}
+
+.instructions {
+  color: whitesmoke;
+}
+
+.items-list {
+  max-height: 265px;
+  overflow-y: auto;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
   gap: 10px;
-  padding: 0;
+  padding: .5rem;
   list-style: none;
+  margin-bottom: 1rem;
+  border: 2px solid aquamarine;
 }
 
-.grid-list li {
+.items-list li {
   background-color: #eee;
   border-radius: 6px;
   padding: 8px;
@@ -21,6 +92,46 @@
   transition: 0.2s;
 }
 
-.grid-list li:hover {
+.items-list li:hover {
   background-color: #ddd;
+}
+
+.recipe-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+  gap: 0.5rem;
+  padding: 0.5rem;
+}
+
+.recipe-card {
+  color: whitesmoke;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 450px;
+}
+
+.recipe-title {
+  height: 60px;
+  margin-bottom: .5rem;
+}
+
+.recipe-image {
+  width: 400px;
+  max-height: 250px;
+  object-fit: cover;
+  border-radius: .5rem;
+}
+
+.btn-details {
+  padding: .4rem;
+  margin-top: .5rem;
+  transition: color 0.5s ease-in-out, backgound-color 0.5s ease-in-out;
+  cursor: pointer;
+}
+
+.btn-details:hover {
+  color: whitesmoke;
+  background-color: black;
 }
